<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">SearchableSpinner</string>
    <string name="xml_entries">XML entries</string>
    <string name="spinner_2">Spinner 2</string>
    <string name="show_dialog">SHOW DIALOG</string>
    <string name="show_light_dialog">SHOW LIGHT DIALOG</string>
    <string name="set_light_mode">SET LIGHT MODE</string>
    <string name="set_dark_mode">SET DARK MODE</string>
    <string name="more_info">MORE INFO</string>
    <string name="day_night_dialog">Day Night Dialog</string>
    <string name="light_dialog">Light Dialog</string>

    <string-array name="spinner_options">
        <item tools:ignore="Typos">Test1</item>
        <item>Test2</item>
        <item>Test3</item>
        <item>Test4</item>
        <item>Test5</item>
        <item>Test6</item>
        <item>Test7</item>
        <item>Test8</item>
        <item>Test9</item>
        <item>Test10</item>
        <item tools:ignore="Typos">Test11</item>
        <item>Test12</item>
        <item>Test13</item>
        <item>Test14</item>
        <item>Test15</item>
        <item>Test16</item>
        <item>Test17</item>
        <item>Test18</item>
        <item>Test19</item>
        <item>Test20</item>
        <item>Test21</item>
        <item>Test22</item>
        <item>Test23</item>
        <item>Test24</item>
        <item>Test25</item>
        <item>Test26</item>
        <item>Test27</item>
        <item>Test28</item>
        <item>Test29</item>
        <item>Test30</item>
        <item>Test31</item>
        <item>Test32</item>
        <item>Test33</item>
        <item>Test34</item>
        <item>Test35</item>
        <item>Test36</item>
        <item>Test37</item>
        <item>Test38</item>
        <item>Test39</item>
        <item>Test40</item>
    </string-array>
</resources>
