<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SampleActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xml_entries" />

    <tech.hibk.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:entries="@array/spinner_options"
        app:cancelButtonColor="@color/colorPrimary"
        app:cancelButtontext="CLOSE"
        app:dialogTitle="Sample"
        app:nothingSelectedText="TEST"
        app:onlyLightTheme="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_2" />

    <tech.hibk.searchablespinnerlibrary.SearchableSpinner
        android:id="@+id/spinner2"
        style="@android:style/Widget.Holo.Spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showLightDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show_light_dialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/lightMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_light_mode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/darkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/set_dark_mode" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/moreInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/more_info" />

</LinearLayout>